* switched from jakarta commons-math to a sample "connectfour" project in the cruisecontrol cvs repository.

contrib:
----------------------
* fix distributed/build.xml so that tests will pass out of the box. Patch by Dan Rollo
* updated distributed/README.html to indicate that downloading the JINI jars is no longer required, but jdk1.4+ is. Patch by Dan Rollo.

release.xml:
----------------------
* New targets "deploy-server" and "kill-server" for starting/killing the binary release on a testing port.
* Added "web" tests for the binary distribution. They are executed by the "webtest" target in release.xml.
* Exclude pre-built binaries from source distribution and rename zip to include "src" in the name (CC-336).
* Renamed to build.xml so that it conforms to Ant standards.

build loop
======================

AccurevBootstrapper:
----------------------
* No longer extends AntBuilder, but delegates to an AntBuilder instance. AccurevBootstrapper previously could have been used as a builder and a bootstrapper, but this wasn't semantically correct. It also made it more difficult to look at the class signature and understand its responsibilities. Patch by Kent Spillner.

AntBootstrapper:
----------------------
* No longer extends AntBuilder, but delegates to an AntBuilder instance. AntBootstrapper previously could have been used as a builder and a bootstrapper, but this wasn't semantically correct. It also made it more difficult to look at the class signature and understand its responsibilities.

AntBuilder:
----------------------
* Fails with an explicit error message if the ant log is empty instead of a XML parse Error on line -1: Premature end of file. Patch by Jerome Lacoste.
* Warn that jvmargs are ignored when specifing anthome

AntPublisher:
----------------------